--- a/playbooks/Provisionamento-Vmware-Simples.yml
+++ b/playbooks/Provisionamento-Vmware-Simples.yml
@@ -18,7 +18,7 @@
         name: serv003.labs.corp
         guest_id: serv003.labs.corp
         state: poweredon
-        template: t-rhel7-v03
+        template: rhel7-v02
         disk:
         - size_gb: 15
           type: thin
@@ -37,7 +37,7 @@
           hotadd_cpu: True
           hotremove_cpu: True
           hotadd_memory: False
-          version: 14 # Hardware version of virtual machine
+          #version: 14 # Hardware version of virtual machine
           boot_firmware: "efi"
        # cdrom:
        #   type: iso
