--- a/playbooks/Provisionamento-Vmware-Simples.yml
+++ b/playbooks/Provisionamento-Vmware-Simples.yml
@@ -16,6 +16,7 @@
         folder: /ansiblevms
         state: poweredon
         guest_id: rhel7_64Guest
+        name: pelada.labs.corp
     # This is hostname of particular ESXi server on which user wants VM to be deployed
         esxi_hostname: esx01.labs.corp
         disk:
