--- a/playbooks/Provisionamento-Vmware-Template.yml
+++ b/playbooks/Provisionamento-Vmware-Template.yml
@@ -8,16 +8,16 @@
 
    - name: Create a virtual machine from a template
      vmware_guest:
-        datacenter: DTC01
+        datacenter: "DTC01"
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         validate_certs: no
         folder: /ansiblevms
         state: present
-        guest_id: rhel7_64Guest
-        name: gorda2.labs.corp
-        template: rhel7-v02
+        guest_id: "rhel7_64Guest"
+        name: "gorda3.labs.corp"
+        template: "t-rhel7"
 
         
     # This is hostname of particular ESXi server on which user wants VM to be deployed
@@ -31,13 +31,13 @@
           num_cpus: 2
           scsi: paravirtual
         networks:
-        - name: VM Network
-          mac: aa:bb:dd:aa:00:14
-          ip: 192.168.0.51
-          netmask: 255.255.255.0
-          device_type: vmxnet3
+        - name: "VM Network"
+          #mac: aa:bb:dd:aa:00:14
+          ip: "192.168.0.51"
+          netmask: "255.255.255.0"
+          device_type: "vmxnet3"
           start_connected: yes
           wake_on_lan: yes
         wait_for_ip_address: yes
-     delegate_to: localhost
-     register: deploy_vm      
+     delegate_to: "localhost"
+     register: "deploy_vm"      
