--- a/playbooks/Provisionamento-Vmware-Template.yml
+++ b/playbooks/Provisionamento-Vmware-Template.yml
@@ -45,7 +45,7 @@
    - name: Debug 
      debug: 
         msg: 
-        - Saida dos deployment  '{{ deployvm }}'       
+        - Saida dos deployment  '{{ deploy_vm }}'       
 
 # openvm tools instalado 
 # perl instalado 
