--- a/playbooks/Provisionamento-Vmware-Template.yml
+++ b/playbooks/Provisionamento-Vmware-Template.yml
@@ -70,10 +70,10 @@
 
    - name: set stats 
      set_stats: 
-         data: 
-          2_nome_da_vm: "{{deploy_vm.instance.hw_name}}" 
-         per_host: yes 
-     register: "2_nome_da_vm" 
+       data: 
+        2_nome_da_vm: "{{deploy_vm.instance.hw_name}}" 
+        per_host: yes 
+     register: 2_nome_da_vm
 
    - name: debug-2 
      debug: 
