--- a/playbooks/Provisionamento-Vmware-Template.yml
+++ b/playbooks/Provisionamento-Vmware-Template.yml
@@ -62,11 +62,13 @@
      ignore_errors: true 
 
    - name: Add new instance to host group
-     add_host: hostname={{ deploy_vm.instance.ipv4 }} inventoryname=provisionamento groupname=betina
+     add_host: hostname={{ deploy_vm.instance.ipv4 }}  groupname=betina
      with_items: "{{ deploy_vm.instance }}"
 
+#inventoryname=provisionamento
+
    - name: Wait for SSH to come up
-     wait_for: host={{ deploy_vm.instance.ipv4 }} port=22 delay=60 timeout=320 state=started
+     wait_for: host={{ deploy_vm.instance.ipv4 }} port=22 delay=60 timeout=20 state=started
      with_items: "{{ deploy_vm.instance }}"
     
 #  - name: Set variable for instance IP
