--- a/playbooks/Provisionamento-Vmware-Template.yml
+++ b/playbooks/Provisionamento-Vmware-Template.yml
@@ -69,8 +69,8 @@
 
    - name: Wait for SSH to come up
      wait_for: host={{ deploy_vm.instance.ipv4 }} port=22 delay=60 timeout=20 state=started
-     with_items: "{{ deploy_vm.instance }}"
-     ignore_errors: true
+     #with_items: "{{ deploy_vm.instance }}"
+     #ignore_errors: true
     
 #  - name: Set variable for instance IP
 #    set_fact:
