--- a/playbooks/Provisionamento-Vmware-Template.yml
+++ b/playbooks/Provisionamento-Vmware-Template.yml
@@ -1,6 +1,6 @@
 ---
 -
-   name: Create virtual machine basic 
+   name: Provisione VM RHEL  in VMware 
    hosts: localhost 
    vars: 
 
@@ -86,7 +86,8 @@
  #    register: 2_nome_da_vm
 
 # Second, reconfigure 
-- hosts: betina
+- name: Second play execute all process to subscription Red Hat  
+  hosts: betina
   gather_facts: true 
   connection: smart 
   become: true 
@@ -101,7 +102,7 @@
           auto_attach: true
           pool_ids:
             - 8a85f98260c27fc50160c32cc4365ccb 
-            
+
      - name: Disable all RHSM repositories
        rhsm_repository:
          name: '*'
@@ -114,7 +115,8 @@
   
 
 # Third play configura httpd service 
-- hosts: betina
+- name: Third play configure httpd service and  Firewall policies
+  hosts: betina
   gather_facts: true 
   connection: smart 
   become: true 
@@ -122,28 +124,26 @@
 
   tasks:
 
-     - name: Instala server application 
-       include_tasks: Camada-Application.yml
+    - name: instala apache 
+      yum: 
+        name: httpd 
+        state: present 
 
-     - name: configura firewall 
-       include_tasks: Firewall-Servico.yml
+    - name: enable e inicia servico 
+      systemd: 
+         name: httpd 
+         state: started
+         enabled: yes 
 
-     - name: configura servidor de aplicacao  
-       include_tasks: Camada-Configuracao.yml
-     
-#
-#  - name: Add new instance to host group
-#    add_host: hostname={{ item.public_ip }} groupname=launched
-#    with_items: "{{ ec2.instances }}"
-
-#  - name: Wait for SSH to come up
-#    wait_for: host={{ item.public_dns_name }} port=22 delay=60 timeout=320 state=started
-#    with_items: "{{ ec2.instances }}"
-    
-#  - name: Set variable for instance IP
-#    set_fact:
-#      instance_ip: "{{ item.public_ip }}"
-#    with_items: "{{ ec2.instances }}"      
+    - name: configuracao de firewall padrao Caixa 
+      firewalld:
+         port: "{{ item }}"
+         permanent: true
+         state: enabled
+         immediate: true 
+      with_items: 
+         - "{{ servico_01 }}"
+         - "{{ servico_02 }}"
 
 # openvm tools instalado 
 # perl instalado 
