--- a/playbooks/Provisionamento-Vmware-Template.yml
+++ b/playbooks/Provisionamento-Vmware-Template.yml
@@ -140,7 +140,7 @@
          state: started
          enabled: yes 
 
-    - name: configuracao de firewall padrao Caixa 
+    - name: configuracao de firewall - dois servicos 
       firewalld:
          port: "{{ item }}"
          permanent: true
