--- a/playbooks/Deploy-VMware-VM-Modo03.yaml
+++ b/playbooks/Deploy-VMware-VM-Modo03.yaml
@@ -1,12 +1,12 @@
 
 ---
 -
-   name: Teste modo 03 -  Deploy uma VM Vmware Debug02 VM 02 
+   name: Deploy VMware MOdo 03
    hosts: localhost 
    vars: 
 
    tasks: 
-   - name: Create a virtual machine from a template - teste-d02-debug.labs.corp
+   - name: Create a virtual machine from a template - {{vm_nome}}
      vmware_guest:
         datacenter: "DTC01"
         hostname: "{{ vcenter_hostname }}"
@@ -16,7 +16,7 @@
         folder: /ansiblevms
         state: present
         guest_id: "rhel7_64Guest"
-        name: "teste-d02-debug.labs.corp"
+        name: "{{vm_nome}}"
         template: "t-rhel78"
 
         
@@ -33,7 +33,7 @@
         networks:
         - name: "VM Network"
           #mac: aa:bb:dd:aa:00:14
-          ip: "192.168.0.56"
+          ip: "{{vm_ip}}"
           netmask: "255.255.255.0"
           gateway: "192.168.0.10"
           domain: "labs.corp"
