--- a/playbooks/WorkFlow-Subscreve-RHEL7.yml
+++ b/playbooks/WorkFlow-Subscreve-RHEL7.yml
@@ -1,15 +1,18 @@
 ---
 -
    name: WorkFlow - Registra RHSM  
-   hosts: invtemp 
+   hosts: localhost 
    vars: 
-      user_nome: brolivei@redhat.com
-      user_senha: 
+      #user_nome: brolivei@redhat.com
+      #user_senha: 
    tasks: 
 
- #   - name: Add new instance to host group
- #     add_host: hostname={{ item.ipv4 }} groupname=linux_launched
- #     with_items: "{{ vmware_instances }}"
+    - name: Add new instance to host group
+      add_host: 
+          hostname: '{{ item.ipv4 }}' 
+          groupname: linux_launched
+      with_items: 
+         - "{{ vmware_instances }}"
 
  #   - name: Wait for SSH to come up
  #     wait_for: host={{ item.ipv4 }} port=22 delay=60 timeout=320 state=started
@@ -24,12 +27,12 @@
 
      
 
-#- name: PLAY 02 
-#  hosts: linux_launched
-#  gather_facts: True
+- name: PLAY 02 
+  hosts: linux_launched
+  gather_facts: True
    
 
-#  tasks: 
+  tasks: 
 
     - name: Registro usando usuario e senha no RHSM 
       redhat_subscription:
