--- a/playbooks/Deploy-VM-WithVar-Padrao.yml
+++ b/playbooks/Deploy-VM-WithVar-Padrao.yml
@@ -80,6 +80,10 @@
         -  '{{ deploy_vm.instance }}' 
      ignore_errors: true 
 
+   - name: debug output stats vmware instanes
+     debug: 
+        msg: "{{ vmware_instances }}"
+
    - name: Add new instance to host group
      add_host: 
         hostname: '{{ item.ipv4 }}' 
@@ -91,5 +95,3 @@
  #    wait_for: host={{ item.public_dns_name }} port=22 delay=60 timeout=320 state=started
  #    with_items: "{{ ec2.instances }}"
 
-
-  
