--- a/playbooks/Deploy-VM-WithVar-Padrao.yml
+++ b/playbooks/Deploy-VM-WithVar-Padrao.yml
@@ -70,18 +70,21 @@
         - saida1 direta  "{{deploy_vm.instance.hw_name}}" 
      ignore_errors: true 
 
-   - name: seta status 
+  # - name: seta status 
+  #   set_stats:
+  #     data:
+  #       vmware_instances: '{{ item.ipv4 }}'
+  #     per_host: yes  
+  #   with_items: 
+  #      -  '{{ deploy_vm.instance }}' 
+  #   ignore_errors: true 
+
+   - name: Set fact for subsequent job templates
      set_stats:
        data:
-         vmware_instances: '{{ item.ipv4 }}'
-       per_host: yes  
-     with_items: 
-        -  '{{ deploy_vm.instance }}' 
-     ignore_errors: true 
+        downtime_id: buga 
 
-   - name: debug output stats vmware instanes
-     debug: 
-        msg: "{{ vmware_instances }}"
+  
 
    - name: Add new instance to host group
      add_host: 
@@ -89,6 +92,7 @@
         groups: invtemp
      with_items:
         - "{{ deploy_vm.instance }}"
+    
 
  #  - name: Wait for SSH to come up
  #    wait_for: host={{ item.public_dns_name }} port=22 delay=60 timeout=320 state=started
