--- a/playbooks/WorkFlow-Subscreve-RHEL7.yml
+++ b/playbooks/WorkFlow-Subscreve-RHEL7.yml
@@ -9,10 +9,10 @@
 
     - name: Add new instance to host group
       add_host: 
-          hostname: '{{ item.ipv4 }}' 
+          hostname:  vmware_instances  
           groupname: linux_launched
-      with_items: 
-         - "{{ vmware_instances }}"
+ 
+         
 
  #   - name: Wait for SSH to come up
  #     wait_for: host={{ item.ipv4 }} port=22 delay=60 timeout=320 state=started
