--- a/playbooks/Teste-Show-Setstat.yml
+++ b/playbooks/Teste-Show-Setstat.yml
@@ -1,7 +1,7 @@
 ---
 -
    name: WorkFlow - Registra RHSM  
-   hosts: 192.168.0.205 
+   hosts: all 
    vars: 
       #user_nome: brolivei@redhat.com
       #user_senha: 
